gcc/testsuite/g++.dg/modules/static-1_c.C
// { dg-additional-options "-fmodules-ts" }

import Foo;

void Frob ()
{
  Bar (); // { dg-error "not declared" }
  Baz (); // { dg-error "not declared" }
}

